Fix scrolling with overflow.

--- a/webapp/styles/main.css
+++ b/webapp/styles/main.css
@@ -9,7 +9,8 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background-color: #222222;
+    background-color: #222;
+    overflow: hidden;
 }
 
 canvas {
